# loongson-IndustrialIoT

./: README.md
code/PC/: code.json  human_detector_stream.py
code/loongson/: CMakeLists.txt  main.cpp
code/loongson/include/: camera_driver.hpp  dht11_driver.hpp  mic_driver.hpp
code/loongson/src/: camera_driver.cpp  dht11_driver.cpp  mic_driver.cpp
